--- a/.github/workflows/master_jordyscrap.yml
+++ b/.github/workflows/master_jordyscrap.yml
@@ -20,6 +20,20 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: '3.7'
+    
+    - name: Make envfile
+      uses: SpicyPizza/create-envfile@v1
+      with:
+        envkey_SENDER_MAIL: ${{ secrets.SENDER_MAIL }}
+        envkey_MAIL_PASS: ${{ secrets.MAIL_PASS }}
+        envkey_PG_HOST: ${{ secrets.PG_HOST }}
+        envkey_PG_PASSWORD: ${{ secrets.PG_PASSWORD }}
+        envkey_PG_USER: ${{ secrets.PG_USER }}
+        envkey_PG_DATABSE: ${{ secrets.PG_DATABASE }}
+        file_name: .env
+    
+    - name: run tests
+      run: python3 tests.py
 
     - name: Build using AppService-Build
       uses: azure/appservice-build@v2
